# bevy_3d_aim_trainer

./: Cargo.toml  LICENSE.md
assets/: ak47_animated.glb  license_ak47.txt
assets/models/players/: license_soldier_animated.txt  soldier_animated.glb
assets/models/weapons/: ak47_animated.glb
src/: fps_gun_plugin.rs  main.rs
src/animations/: animated_entity_plugin.rs  look_plugin.rs  mod.rs
src/fps_controller/: fps_controller.rs  mod.rs
src/game_modes/: game_modes.rs  mod.rs
src/game_states/: game_states.rs  mod.rs
src/game_states/ingame/: ingame.rs  mod.rs
src/multiplayer/: client.rs  mod.rs  protocol.rs  server.rs  shared.rs
