[package]
name = "aim_trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3" }
bevy_rapier3d = "0.29.0"
clap = { version = "4.5.32", features = ["derive"] }
lightyear = "0.19.0"
rand = "0.9.0"
serde = "1.0.219"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
